feat: notifications services, repositories, routes, controllers and tests
