# backend/openAPI.yml
@@ -19,6 +19,7 @@ tags:
   - name: laboratories
   - name: classrooms
   - name: schedules
+  - name: notifications
 
 components:
   securitySchemes:
@@ -125,6 +126,44 @@ components:
           format: uuid
         classroom:
           type: string
+        created_at:
+          type: string
+          format: dateformat
+        updated_at:
+          type: string
+          format: dateformat
+    Schedule:
+      properties:
+        id:
+          type: string
+          format: uuid
+        schedule_name:
+          type: string
+        schedule_begin:
+          type: string
+        schedule_end:
+          type: string
+        created_at:
+          type: string
+          format: dateformat
+        updated_at:
+          type: string
+          format: dateformat
+    Notification:
+      properties:
+        id:
+          type: string
+          format: uuid
+        type:
+          type: string
+        description:
+          type: string
+        sender_user_id:
+          type: string
+          format: uuid
+        recipient_user_id:
+          type: string
+          format: uuid
         created_at:
           type: string
           format: dateformat
@@ -1217,3 +1256,131 @@ paths:
                     schedule_end:
                       type: string
                       example: "08:10"
+
+  /notifications:
+    post:
+      summary: Creates a notification.
+      tags:
+        - notifications
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                type:
+                  type: string
+                  example: "schedules"
+                description:
+                  type: string
+                  example: "Notification description"
+                recipient_user_id:
+                  type: string
+                  format: uuid
+                  example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Returns a JSON containing the created notification.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    format: uuid
+                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                  type:
+                    type: string
+                    example: "schedules"
+                  description:
+                    type: string
+                    example: "Notification description"
+                  sender_user_id:
+                    type: string
+                    format: uuid
+                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                  recipient_user_id:
+                    type: string
+                    format: uuid
+                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                  created_at:
+                    type: string
+                    format: dateformat
+                    example: "2020-07-02T21:57:00.421Z"
+                  updated_at:
+                    type: string
+                    format: dateformat
+                    example: "2020-07-02T21:57:00.421Z"
+        '400':
+          $ref:  '#/components/responses/IncorrectToken'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+    get:
+      summary: Get the user notifications.
+      tags:
+        - notifications
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Returns a JSON array containing the user notifications.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      format: uuid
+                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                    type:
+                      type: string
+                      example: "schedules"
+                    description:
+                      type: string
+                      example: "Notification description"
+                    sender_user_id:
+                      type: string
+                      format: uuid
+                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                    recipient_user_id:
+                      type: string
+                      format: uuid
+                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                    created_at:
+                      type: string
+                      format: dateformat
+                      example: "2020-07-02T21:57:00.421Z"
+                    updated_at:
+                      type: string
+                      format: dateformat
+                      example: "2020-07-02T21:57:00.421Z"
+  /notifications/{id}:
+    delete:
+      summary: Deletes a notification.
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+            format: uuid
+            example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+          required: true
+          description: Notification id to delete it.
+      tags:
+        - notifications
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Returns a successfully deleted notification confirmation.
+        '400':
+          $ref:  '#/components/responses/IncorrectToken'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
