# backend/src/modules/notifications/dtos/ICreateNotificationDTO.ts
@@ -1,0 +1,6 @@
+export default interface ICreateNotificationDTO {
+  type: 'schedules' | 'support' | 'programs';
+  description: string;
+  sender_user_id: string;
+  recipient_user_id: string;
+}
