# backend/src/modules/notifications/infra/typeorm/schemas/Notification.ts
@@ -1,0 +1,33 @@
+import {
+  Entity,
+  Column,
+  CreateDateColumn,
+  UpdateDateColumn,
+  ObjectIdColumn,
+} from 'typeorm';
+
+@Entity('notifications')
+class Notification {
+  @ObjectIdColumn()
+  id: string;
+
+  @Column()
+  type: string;
+
+  @Column()
+  description: string;
+
+  @Column()
+  sender_user_id: string;
+
+  @Column()
+  recipient_user_id: string;
+
+  @CreateDateColumn()
+  created_at: Date;
+
+  @UpdateDateColumn()
+  updated_at: Date;
+}
+
+export default Notification;
