# backend/src/shared/infra/http/routes/index.ts
@@ -9,6 +9,7 @@ import subjectsRouter from '@modules/subjects/infra/http/routes/subjects.routes'
 import laboratoriesRouter from '@modules/laboratories/infra/http/routes/laboratories.routes';
 import classroomsRouter from '@modules/classrooms/infra/http/routes/classrooms.routes';
 import schedulesRouter from '@modules/schedules/infra/http/routes/schedules.routes';
+import notificationsRouter from '@modules/notifications/infra/http/routes/notifications.routes';
 
 const routes = Router();
 
@@ -21,5 +22,6 @@ routes.use('/subjects', subjectsRouter);
 routes.use('/laboratories', laboratoriesRouter);
 routes.use('/classrooms', classroomsRouter);
 routes.use('/schedules', schedulesRouter);
+routes.use('/notifications', notificationsRouter);
 
 export default routes;
